// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Stack /> should be defined 1`] = `
<div>
  <div
    class="HvStack-root-1 HvStack-column-2 HvStack-sm-5"
  >
    <div
      data-testid="child"
    >
      1
    </div>
    <div
      data-testid="child"
    >
      2
    </div>
    <div
      data-testid="child"
    >
      3
    </div>
  </div>
</div>
`;

exports[`<Stack /> should match snapshot 1`] = `
<div>
  <div
    class="HvStack-root-9 HvStack-column-10 HvStack-sm-13"
  >
    <div
      data-testid="child"
    >
      1
    </div>
    <div
      data-testid="child"
    >
      2
    </div>
    <div
      data-testid="child"
    >
      3
    </div>
  </div>
</div>
`;
